@@ -1,3 +1,6 @@
+2012-05-22
+* add 'debug' statement for helping debugging
+
 2012-05-21
 * extra sanity checks for BAT_REPORTDIR
 * add wrapper code for scanning Minix v1 file systems
